feat: Cubic core computing

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <artifactId>loenan-bricks</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
