--- a/brick-sphere-generator/pom.xml
+++ b/brick-sphere-generator/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>loenan-bricks</groupId>
 		<artifactId>loenan-bricks-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 
 	<artifactId>brick-sphere-generator</artifactId>
