--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>loenan-bricks</groupId>
 	<artifactId>loenan-bricks-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<scm>
 		<connection>scm:git:https://github.com/loenan/loenan-bricks.git</connection>
