--- a/ldraw-builder/pom.xml
+++ b/ldraw-builder/pom.xml
@@ -14,6 +14,13 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
+		<!-- Apache Commons dependencies -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
