--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring-boot.version>2.6.4</spring-boot.version>
-		<junit-jupiter.version>5.8.2</junit-jupiter.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
 		<commons-io.version>2.11.0</commons-io.version>
+		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
+			<!-- Project dependencies -->
 			<dependency>
 				<groupId>loenan-bricks</groupId>
 				<artifactId>ldraw-builder</artifactId>
@@ -43,6 +45,8 @@
 				<artifactId>brick-sphere-app</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+
+			<!-- Spring dependencies -->
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
@@ -59,6 +63,19 @@
 				<version>${spring-boot.version}</version>
 			</dependency>
 
+			<!-- Apache Commons dependencies -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons-io.version}</version>
+			</dependency>
+
+			<!-- Test dependencies -->
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-api</artifactId>
@@ -69,12 +86,6 @@
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-engine</artifactId>
 				<version>${junit-jupiter.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons-io.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
