--- a/brick-sphere-app/pom.xml
+++ b/brick-sphere-app/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>loenan-bricks</groupId>
 		<artifactId>loenan-bricks-parent</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>brick-sphere-app</artifactId>
